test_files/s_cproc/macro_define/test_008/e.output
/home/jason/github/stupid_lib/test_files/s_cproc/macro_define/test_008/i.input:1:23: error: macro names must be identifiers
 #define/* a comment *//macro"include.input"
                       ^
